--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,3 @@
-# Preface {.unnumbered}
+# CAMDA 2025 {.unnumbered}
 
-This is a Quarto book.
-
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
-
-```{r}
-1 + 1
-```
+Analisis de los metadatos proporcionados por CAMDA, tanto training dataset como de testing.
