--- a/2_Metadata_comparing_CAMDAvsNCBI.qmd
+++ b/2_Metadata_comparing_CAMDAvsNCBI.qmd
@@ -42,7 +42,7 @@ sra_metadata <- read_csv(here("metadata", "sra-metadata.csv"))
 sra_metadata_db <- sra_metadata %>% janitor::clean_names() %>%  # para limpiar y estandarizar los nombres de columnas de un data frame
   select(run, library_strategy, library_selection, library_source, platform, model, bio_project, bio_sample, scientific_name) %>%
   # renombrar columnas
-  rename(accession = run, scientific_name_NCBI = scientific_name)
+  rename(accession = run, scientific_name_complete = scientific_name)
 # Rows: 11510 Columns: 47── Column specification
 
 # Reduce name
@@ -159,7 +159,7 @@ intersect(training_metadata_db$scientific_name_CAMDA, sra_metadata_db$scientific
 ### Test vs public data
 
 ```{r}
-intersect(test_metadata_db$scientific_name_CAMDA, sra_metadata_db$scientific_name_NCBI)
+intersect(testing_metadata_cleaned$scientific_name_CAMDA, sra_metadata_db$scientific_name_NCBI)
 ```
 
 ## STEP 4. Comparing the information of Specie and accession (SRA ID)
@@ -189,7 +189,7 @@ The resulting dataset includes two status columns: **`status`** and **`status_re
 
 When the species annotations provided by NCBI and the antibiogram metadata do not match, it raises concerns about the accuracy of the sample's taxonomic identity. Such discrepancies may indicate mislabeling, contamination, or outdated records. Therefore, it is essential to verify the original sources to ensure the reliability of downstream analyses.
 
-### Training vs NCBI data
+### Training vs public data
 
 #### Check species name matches between CAMDA and NCBI
 
@@ -217,7 +217,7 @@ write_tsv(training_completeInfo_db, file = here("rawdata/TrainAndTest_cleaned", 
 table(training_completeInfo_db$status)
 ```
 
-How many species have at least one missing entry?
+## About missing data
 
 ```{r}
 training_completeInfo_db %>%
@@ -247,19 +247,12 @@ training_verify_data <- training_completeInfo_db %>%
 table(training_completeInfo_db$status_reference)
 ```
 
-## Test vs NCBI data
+## Test vs public data
 
-#### 2.1 Check species name matches between CAMDA and NCBI
+#### Check species name matches between CAMDA and NCBI
 
 ```{r}
-test_completeInfo_db <- left_join(test_metadata_db, sra_metadata_db, by ="accession") %>%
-  select(accession, scientific_name_CAMDA, scientific_name_NCBI) %>%
-  distinct() %>% #eliminas filas
-  # Agregar informacion si coinden o no las especies
-  mutate( status = case_when(
-      scientific_name_CAMDA == scientific_name_NCBI ~ "coincide",
-      TRUE ~ "no coincide"
-    )) 
+test_completeInfo_db <- compare_sp(testing_metadata_cleaned, sra_metadata_db, antibiograms_metadata_db)
 
 # Global information
 test_completeInfo_db %>%  
@@ -270,51 +263,110 @@ test_completeInfo_db %>%
 Save data
 
 ```{r}
-write_tsv(test_completeInfo_db, file = "../rawdata/Test_status_sp_CAMDAvsNCBI.tsv.gz")
+write_tsv(test_completeInfo_db, file = here("rawdata/TrainAndTest_cleaned", "Test_allstatus_sp_reference_metadata.tsv.gz"), quote = "none")
 ```
 
-#### 2.2 How many SRA entries are correctly annotated and how many are not?
+#### How many SRA entries are correctly annotated and how many are not?
 
 ```{r}
 # Global 
 table(test_completeInfo_db$status)
 ```
 
-Que especies no coinden
+#### Checar las fuentes
 
 ```{r}
-test_completeInfo_db %>% filter(status == "no coincide") %>%
-  distinct(scientific_name_CAMDA)
+test_verify_data <- test_completeInfo_db %>%
+  filter(status_reference == "Verify_sources") 
 ```
-
-#### 2.3 What information recorded in CAMDA does not match the NCBI data?
 
 ```{r}
-test_completeInfo_db %>% filter(status == "no coincide") %>%
-  group_by(scientific_name_CAMDA) %>%
-  distinct(scientific_name_NCBI) %>%
-  # Visualizar informacion en una tabla bonita
-  DT::datatable()
+table(test_completeInfo_db$status_reference)
 ```
 
-#### 2.4 How many samples from each species do not match the NCBI data?
+## STEP 5: Reetiquetas muestras y eliminar especies mal anotadas
+
+Identify SRA IDs with inconsistent annotations that require verification
 
 ```{r}
-test_completeInfo_db %>%
-  filter(status == "no coincide") %>%
-  group_by(scientific_name_CAMDA) %>%
-  summarise(n_mal_anotadas = n()) %>%
-  arrange(desc(n_mal_anotadas))
+SRA_IDs_rare_db <- training_completeInfo_db %>%
+  # Keep only entries where external sources (NCBI and/or antibiogram) do not fully agree
+  filter(status_reference == "Verify_sources") %>%
+  # Ensure the NCBI scientific name is available
+  filter(!is.na(scientific_name_NCBI)) %>%
+  # Exclude entries that already match the NCBI annotation
+  filter(status != "Matched_NCBI")
+
+SRA_IDs_rare_db
 ```
 
-## To do list
-
--   Cuantos SRR tenemos en total por especie?
--   Cuantas 341 se pueden reeetiquetar con la misma especie relacionada con las especies que tenemos?
--   Porcentajes de datos que debemos eliminar?
-
-In one specific case, the species reported in both the CAMDA and antibiogram datasets is incorrect: SRR2101499 was annotated as *Staphylococcus aureus*, but it has been previously reported to be misassigned and actually corresponds to *Mycobacterium tuberculosis*.
-
-Based on the information obtained from public datasets, we have decided to remove SRA IDs SRR2101499, ERR1218771, and SRR5386043, as they correspond to species that are not relevant or appropriate for the scope of this study and are considered sources of noise in the identification of antimicrobial resistance genes.
+Extraer los IDs que se pueden renombrar con otra especie especie existente en CAMDA
 
 Additionally, SRA IDs ERR1218638 and ERR1218722 will be reassigned to *Klebsiella pneumoniae*, a species included in the study. These samples were previously annotated in the CAMDA dataset as *Escherichia coli*.
+
+```{r}
+SRA_IDs_edited <- SRA_IDs_rare_db %>%
+  # Si alguno de los nombre reales encontrados en NCBI puede ser util para renombrarlo
+  filter(scientific_name_NCBI %in% unique(training_completeInfo_db$scientific_name_CAMDA))
+
+# Quedarme con solo los IDs
+SRA_IDs_edited <- SRA_IDs_edited$accession
+```
+
+Based on the information obtained from public datasets, we have decided to remove SRA IDs "SRR2101499", "SRR960879", "SRR850995", "ERR1218771", "SRR5386043" and "SRR6985679", as they correspond to species that are not relevant or appropriate for the scope of this study and are considered sources of noise in the identification of antimicrobial resistance genes.
+
+```{r}
+SRA_IDs_removed <- SRA_IDs_rare_db %>%
+  # IDs que no se encuentran en NCBI y que estan mal, nos meten ruido
+  filter(!(scientific_name_NCBI %in% unique(training_completeInfo_db$scientific_name_CAMDA)))
+
+# Quedarme con solo los IDs
+SRA_IDs_removed <- SRA_IDs_removed$accession
+```
+
+Eliminar la informacion y limpiar los datos
+
+```{r}
+training_cleanedInfo_db <- training_completeInfo_db %>%
+  # Eliminar Missing data (282 SRa IDs)
+  filter(status != "Missing_All") %>%
+  # Elimianr especies mal anotadas (6 SRA IDs)
+  filter(!(accession %in% SRA_IDs_removed)) %>%
+  # Renombrar especies mal anotadas
+  mutate(scientific_name_CAMDA = case_when(
+    accession %in% SRA_IDs_edited ~ "Klebsiella pneumoniae",
+    TRUE ~ scientific_name_CAMDA  # o cualquier columna base
+  ))
+```
+
+```{r}
+table(training_cleanedInfo_db$status)
+```
+
+Save data
+
+```{r}
+write_tsv(training_cleanedInfo_db, file = here("rawdata/TrainAndTest_cleaned", "training_metadata_cleaned.tsv"), quote = "none")
+```
+
+Verificar los numeros totales de los SRA IDs
+
+```{r}
+# Count unique accessions per species in the training metadata
+train_counts_cleaned <- training_cleanedInfo_db %>%
+  group_by(scientific_name_CAMDA) %>%
+  summarise(trainClean_num_accessions = n_distinct(accession))
+
+# Count unique accessions per species in the testing metadata
+test_counts_cleaned <- test_completeInfo_db %>%
+  group_by(scientific_name_CAMDA) %>%
+  summarise(testClean_num_accessions = n_distinct(accession))
+
+# Combine the counts by species, keeping all species present in the training set
+combined_counts_completed <- combined_counts %>%
+  left_join(train_counts_cleaned, by = "scientific_name_CAMDA") %>%
+  left_join(test_counts_cleaned, by = "scientific_name_CAMDA") 
+
+# Display the combined counts table
+combined_counts_completed
+```
